checking result of work